# cpmg_tools

./: .gitignore  README.md  setup.cfg
cpmg_tools/: __init__.py  bruker.py  processing.py  simpson.py
examples/: 207Pb_PbZrO3_MAS_WCPMG_1.spe  PtMix_example.py  automatic_phasing_example.py  combine_stepped_aquisition_example.py  denoise_example.py  example_PtMix.py  linebroadening_example.py  phasecorrection_example.py  proc_echotrain_example.py  profile.out  profile_2spin.out  program.prof  read_write_example.py  simpson_2spin_direct_fitting_example.py  simpson_2spin_fitting_example.py  simpson_custom_example.py  simpson_direct_fit.tcl  simpson_direct_fit_test.spe  simpson_fitting_example.py  simpson_pipe_example.py
examples/example_data/119Sn_SnO2_double_echo_cpmg/1100/: acqu  acqus  audita.txt  fid  format.ased  format.temp  pulseprogram.precomp  scon2  shimvalues  specpar  uxnmr.info
examples/example_data/119Sn_SnO2_double_echo_cpmg/1101/: acqu  acqus  adcInfo_TRX4.xml  audita.txt  fid  pulseprogram  spnam21  stanprogram5675.precomp  uxnmr.par
examples/example_data/14N_Glycine_MAS_WCPMG/9510131/: acqu  acqus  adcInfo_TRX4.xml  audita.txt  fid  scon2  shimvalues  specpar  spnam1
examples/example_data/14N_Glycine_MAS_WCPMG/9510231/: acqu  acqus  adcInfo_TRX4.xml  audita.txt  fid  scon2  shimvalues  specpar  spnam1
nmr_tools/: fileiobase.py  plot.py  proc_base.py  processing.py  simpson.py
src/cpmg_tools/: __init__.py  processing.py  svd_auto.py
src/cpmg_tools_mbusskamp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+438 files in other folders)
