[metadata]
name = cpmg-tools-mbusskamp
version = 0.3
author = Max Busskamp
author_email = max.busskamp@uni-muenster.de
description = A package to process and analyse cpmg-type SSNMR experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://zivgitlab.uni-muenster.de/ak-hansen/programming/nmr_tools/-/tree/master
project_urls =
    Bug Tracker = https://zivgitlab.uni-muenster.de/ak-hansen/programming/nmr_tools/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Framework :: Matplotlib
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    nmrglue
    lmfit
    matplotlib
    numpy
    scipy


[options.packages.find]
where = src
